httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: multi-app
spec:
  selector:
    app: httpd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      type: 
  type: ClusterIP
